Remove fixed width from headings; flex will sort it out and this avoids alignment issues

--- a/common/common.scss
+++ b/common/common.scss
@@ -67,7 +67,6 @@
   margin-left:0;
   .headerLink {
     list-style: none;
-    width: 90px;
     height: 60px;
 
     @media(max-width: 991.98px) {
